--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     annotationProcessor 'androidx.room:room-compiler:2.2.4'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
